feat: persist data 1 day without fetching

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Inicio</title>
 </head>
 <body>
-<button onclick="new Session().getTransferTxs()">Get Tx</button>
+<button onclick="new Transaction().getTransferTxs()">Get Tx</button>
 <br />
-<button onclick="new Session().getTransferTxs()">Get all txs</button>
+<button onclick="new Transaction().getTransferTxs()">Get all txs</button>
 <br />
-<button onclick="new Session().delete()">Delete sesión</button>
+<button onclick="new Transaction().delete()">Delete sesión</button>
 <script>
     class Request
     {
@@ -64,15 +64,8 @@
         }
     }
 
-    class Session extends Request
+    class Transaction extends Request
     {
-        async getTx(){
-            this.method = 'GET';
-            const algo = await this.send(`${this.getBaseUrl()}/v1/txs?offset=0&limit=100&account=terra1exqfh9ahyzm9g8z3ce57eyuxx72vem63utepjsf6stqtrztyz58spaf8ew`);
-            const data = await algo.json()
-            const algo1=data
-            console.log(algo1)
-        }
         async getTransferTxs(){
             const txs=await this.getTxs()
             const transferTxs=txs.filter(tx=>tx.logs[0]?.events.reduce((isTransfer,currentEvent)=>isTransfer||(currentEvent.type==="transfer"),false))
@@ -87,8 +80,11 @@
        async getTxs()
         {
             this.method = 'GET';
-            let txs = [];
-            let keepGoing = true;
+            let txs = localStorage.getItem('txs')?JSON.parse(localStorage.getItem('txs')):[];
+            const currentDate=new Date()
+            const tomorrow = currentDate.setDate(currentDate.getDate() + 1)
+            let lastUpdate = localStorage.getItem('lastUpdate') || null
+            let keepGoing = lastUpdate?(currentDate.getTime() <= lastUpdate):true ;
             let offset = 0;
             while (keepGoing) {
                 let response = await this.send(`${this.getBaseUrl()}/v1/txs?offset=${offset}&limit=100&account=terra1exqfh9ahyzm9g8z3ce57eyuxx72vem63utepjsf6stqtrztyz58spaf8ew`);
@@ -100,6 +96,8 @@
                 // the behavior will be fine.
                 if (!data.next) {
                     keepGoing = false;
+                    localStorage.setItem("lastUpdate",tomorrow)
+                    localStorage.setItem("txs",JSON.stringify(txs))
                 }
             }
             return txs;
