feat: add lcd baseurl

--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
             return '*/*';
         }
 
+        getLcdBaseUrl()
+        {
+            return 'https://phoenix-lcd.terra.dev';
+        }
 
-
-        getBaseUrl()
+        getFcdBaseUrl()
         {
             return 'https://phoenix-fcd.terra.dev';
         }
@@ -111,15 +114,13 @@
             }
             return fetch(url, this);
         }
-
-        setToken(token)
-        {
-            return (this.constructor.token = token);
-        }
     }
 
     class Transaction extends Request
     {
+        async getProposalTxs(){
+
+        }
         async getTransferTxs(){
             const txs=await this.getTxs()
             const transferTxs=txs.filter(tx=>tx.logs[0]?.events.reduce((isTransfer,currentEvent)=>isTransfer||(currentEvent.type==="transfer"),false))
@@ -153,7 +154,7 @@
             }
             let offset = 0;
             while (keepGoing) {
-                let response = await this.send(`${this.getBaseUrl()}/v1/txs?offset=${offset}&limit=100&account=terra1exqfh9ahyzm9g8z3ce57eyuxx72vem63utepjsf6stqtrztyz58spaf8ew`);
+                let response = await this.send(`${this.getFcdBaseUrl()}/v1/txs?offset=${offset}&limit=100&account=terra1exqfh9ahyzm9g8z3ce57eyuxx72vem63utepjsf6stqtrztyz58spaf8ew`);
                 let data = await response.json()
                 txs.push.apply(txs, data.txs);
                 offset = data.next;
@@ -169,9 +170,13 @@
             return txs;
         }
 
-        getBaseUrl()
+        getFcdBaseUrl()
         {
-            return super.getBaseUrl();
+            return super.getFcdBaseUrl();
+        }
+        getLcdBaseUrl()
+        {
+            return super.getFcdBaseUrl();
         }
     }
 </script>
