feat: add object to base64 and base64 to object conversor

--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
             return txs;
         }
 
+        objectToBase64(obj){
+            return btoa(JSON.stringify(obj))
+        }
+        base64ToObject(base64){
+            return JSON.parse(atob(base64))
+        }
+
         getFcdBaseUrl()
         {
             return super.getFcdBaseUrl();
