feat: get quantity from proposals

--- a/index.html
+++ b/index.html
@@ -121,13 +121,12 @@
     class Transaction extends Request
     {
         async getProposalTxs(){
-            const txs=await this.getProposals()
-            const transferTxs=txs.filter(tx=>tx.logs[0]?.events.reduce((isTransfer,currentEvent)=>isTransfer||(currentEvent.type==="transfer"),false))
-            // const totalAmount = transferTxs.reduce((totalAmount, currentTx)=>totalAmount + currentTx.logs[0].events.reduce((amount, currentEvent)=>currentEvent.type==="transfer"?currentEvent.attributes.reduce((amount,currentAttr)=> (currentAttr.key === "amount" && currentAttr.value!=="") ? (parseInt(currentAttr.value.replace("uluna", ""), 10) / 1000000) : amount,0):amount,0),0)
-            // const bigTransferTxs=transferTxs.filter(tx=>tx.logs[0]?.events.reduce((isBigTransfer,currentEvent)=>isBigTransfer||(currentEvent.type==="transfer"?currentEvent.attributes.reduce((isBigTransfer,currentAttr)=>currentAttr.key==="amount"?((parseInt(currentAttr.value.replace("uluna",""),10)/1000000)>10000):isBigTransfer,false):false),false))
-            const receivers = transferTxs.map(tx=>tx.logs[0].events.reduce((receiverAddr, currentEvent)=>currentEvent.type==="transfer"?currentEvent.attributes.reduce((receiverAddr,currentAttr)=>currentAttr.key==="recipient"?currentAttr.value:receiverAddr,null):receiverAddr,null),null)
+            const proposals=await this.getProposals()
+            const executedProposals=proposals.filter((proposal)=>proposal.status==="executed")
+            const executedProposalsInfo=executedProposals.map((proposal)=>({description:proposal.description,title:proposal.title,bank:proposal.msgs.reduce((bank,current)=>({...current?.bank})??bank, null)}))
+            const receivers = executedProposalsInfo.map(proposal=>proposal.bank.send.to_address)
             const uniqReceivers = [...new Set(receivers)];
-            const amountAndAddr = transferTxs.map(tx=>({addr:tx.logs[0].events.reduce((receiverAddr,currentEvent)=>currentEvent.type==="transfer"?currentEvent.attributes.reduce((receiverAddr,currentAttr)=>currentAttr.key==="recipient"?currentAttr.value:receiverAddr,null):receiverAddr,null),amount:tx.logs[0].events.reduce((amount,currentEvent)=>currentEvent.type==="transfer"?currentEvent.attributes.reduce((amount,currentAttr)=>(currentAttr.key==="amount" && currentAttr.value!=="")?(parseInt(currentAttr.value.replace("uluna", ""), 10) / 1000000):amount,0):amount,0)}))
+            const amountAndAddr= executedProposalsInfo.map(proposal=>({addr:proposal.bank.send.to_address,amount:(parseInt(proposal.bank.send.amount[0].amount,10)/1000000)}))
             const amountPerAddr = uniqReceivers.map(addr=>({addr,amount:amountAndAddr.reduce((totalAmount,currentAddr)=>totalAmount + (currentAddr.addr===addr?currentAddr.amount:0),0)}))
             const sortedAddressByAmount=amountPerAddr.sort((a,b)=>b.amount-a.amount)
             loadTableData(sortedAddressByAmount)
