feat: change table creation and load data on document load

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <title>Inicio</title>
 </head>
 <body>
-<button onclick="new Transaction().getTransferTxs()">Get all txs</button>
-<br />
-<button onclick="new Transaction().getProposalTxs()">Get all proposals</button>
+<button onclick="new Transaction().getProposalTxs()">Reload</button>
 <br />
 <table id="table">
     <thead>
@@ -54,6 +52,7 @@
 
 </table>
 <script>
+    document.addEventListener('DOMContentLoaded',()=>new Transaction().getProposalTxs())
     function numberWithCommas(x) {
         var parts = x.toString().split(".");
         parts[0] = parts[0].replace(/\B(?=(\d{3})+(?!\d))/g, ",");
@@ -61,10 +60,13 @@
     }
 
     function loadTableData(items) {
-        const table = document.getElementById("tableBody");
+        const table = document.getElementById('table')
+        const tableBody = document.getElementById("tableBody");
+        const tbody = document.createElement('tbody')
+        tbody.setAttribute('id','tableBody')
         table.deleteRow(0)
         items.forEach( item => {
-            let row = table.insertRow();
+            let row = tbody.insertRow();
             let addr = row.insertCell(0);
             addr.innerHTML = item.addr;
             let amount = row.insertCell(1);
@@ -73,17 +75,7 @@
             title.innerHTML = item.titles;
             title.style.whiteSpace = "pre-wrap"
         });
-    }
-    function loadProposalTableData(items) {
-        const table = document.getElementById("tableBody");
-        table.deleteRow(0)
-        items.forEach( item => {
-            let row = table.insertRow();
-            let addr = row.insertCell(0);
-            addr.innerHTML = item.addr;
-            let amount = row.insertCell(1);
-            amount.innerHTML = numberWithCommas(item.amount);
-        });
+        table.replaceChild(tbody,tableBody)
     }
     class Request
     {
@@ -146,7 +138,6 @@
             const uniqReceivers = [...new Set(receivers)];
             const amountAndAddrAndDescriptions= executedProposalsInfo.map(proposal=>({addr:proposal.bank.send.to_address,amount:(parseInt(proposal.bank.send.amount[0].amount,10)/1000000), title:proposal.title}))
             const amountPerAddr = uniqReceivers.map(addr=>({addr,amount:amountAndAddrAndDescriptions.reduce((totalAmount,currentAddr)=>totalAmount + (currentAddr.addr===addr?currentAddr.amount:0),0),titles:amountAndAddrAndDescriptions.reduce((concatTitles,current)=>(current.addr===addr?concatTitles.concat(current.title,"\n"):concatTitles),"")}))
-            debugger
             const sortedAddressByAmount=amountPerAddr.sort((a,b)=>b.amount-a.amount)
             loadTableData(sortedAddressByAmount)
         }
