chore: add semicolons to some sentences

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <script>
     document.addEventListener('DOMContentLoaded',()=>new Transaction().getProposalTxs())
     function numberWithCommas(x) {
-        var parts = x.toString().split(".");
+        let parts = x.toString().split(".");
         parts[0] = parts[0].replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         return parts.join(".");
     }
@@ -62,9 +62,9 @@
     function loadTableData(items) {
         const table = document.getElementById('table')
         const tableBody = document.getElementById("tableBody");
-        const tbody = document.createElement('tbody')
-        tbody.setAttribute('id','tableBody')
-        table.deleteRow(0)
+        const tbody = document.createElement('tbody');
+        tbody.setAttribute('id','tableBody');
+        table.deleteRow(0);
         items.forEach( item => {
             let row = tbody.insertRow();
             let addr = row.insertCell(0);
@@ -73,9 +73,9 @@
             amount.innerHTML = numberWithCommas(item.amount);
             let title = row.insertCell(2);
             title.innerHTML = item.titles;
-            title.style.whiteSpace = "pre-wrap"
+            title.style.whiteSpace = "pre-wrap";
         });
-        table.replaceChild(tbody,tableBody)
+        table.replaceChild(tbody,tableBody);
     }
     class Request
     {
@@ -131,15 +131,15 @@
     class Transaction extends Request
     {
         async getProposalTxs(){
-            const proposals=await this.getProposals()
-            const executedProposals=proposals.filter((proposal)=>proposal.status==="executed")
-            const executedProposalsInfo=executedProposals.map((proposal)=>({description:proposal.description,title:proposal.title,bank:proposal.msgs.reduce((bank,current)=>({...current?.bank})??bank, null)}))
-            const receivers = executedProposalsInfo.map(proposal=>proposal.bank.send.to_address)
+            const proposals=await this.getProposals();
+            const executedProposals=proposals.filter((proposal)=>proposal.status==="executed");
+            const executedProposalsInfo=executedProposals.map((proposal)=>({description:proposal.description,title:proposal.title,bank:proposal.msgs.reduce((bank,current)=>({...current?.bank})??bank, null)}));
+            const receivers = executedProposalsInfo.map(proposal=>proposal.bank.send.to_address);
             const uniqReceivers = [...new Set(receivers)];
-            const amountAndAddrAndDescriptions= executedProposalsInfo.map(proposal=>({addr:proposal.bank.send.to_address,amount:(parseInt(proposal.bank.send.amount[0].amount,10)/1000000), title:proposal.title}))
-            const amountPerAddr = uniqReceivers.map(addr=>({addr,amount:amountAndAddrAndDescriptions.reduce((totalAmount,currentAddr)=>totalAmount + (currentAddr.addr===addr?currentAddr.amount:0),0),titles:amountAndAddrAndDescriptions.reduce((concatTitles,current)=>(current.addr===addr?concatTitles.concat(current.title,"\n"):concatTitles),"")}))
-            const sortedAddressByAmount=amountPerAddr.sort((a,b)=>b.amount-a.amount)
-            loadTableData(sortedAddressByAmount)
+            const amountAndAddrAndDescriptions= executedProposalsInfo.map(proposal=>({addr:proposal.bank.send.to_address,amount:(parseInt(proposal.bank.send.amount[0].amount,10)/1000000), title:proposal.title}));
+            const amountPerAddr = uniqReceivers.map(addr=>({addr,amount:amountAndAddrAndDescriptions.reduce((totalAmount,currentAddr)=>totalAmount + (currentAddr.addr===addr?currentAddr.amount:0),0),titles:amountAndAddrAndDescriptions.reduce((concatTitles,current)=>(current.addr===addr?concatTitles.concat(current.title,"\n"):concatTitles),"")}));
+            const sortedAddressByAmount=amountPerAddr.sort((a,b)=>b.amount-a.amount);
+            loadTableData(sortedAddressByAmount);
         }
         async getTransferTxs(){
             const txs=await this.getTxs()
@@ -157,25 +157,25 @@
         {
             this.method = 'GET';
             let txs;
-            let nextUpdate
-            const currentDate=new Date()
-            const tomorrow = new Date()
-            tomorrow.setDate(tomorrow.getDate() + 1)
+            let nextUpdate;
+            const currentDate=new Date();
+            const tomorrow = new Date();
+            tomorrow.setDate(tomorrow.getDate() + 1);
             if(localStorage.getItem('nextUpdate')){
-                nextUpdate = parseInt(localStorage.getItem('nextUpdate'),10)
+                nextUpdate = parseInt(localStorage.getItem('nextUpdate'),10);
             }else{
-                nextUpdate = 0
+                nextUpdate = 0;
             }
             let keepGoing = (currentDate.getTime() >= nextUpdate) ;
             if(keepGoing===false && localStorage.getItem('txs')){
-                txs=JSON.parse(localStorage.getItem('txs'))
+                txs=JSON.parse(localStorage.getItem('txs'));
             }else{
-                txs=[]
+                txs=[];
             }
             let offset = 0;
             while (keepGoing) {
                 let response = await this.send(`${this.getFcdBaseUrl()}/v1/txs?offset=${offset}&limit=100&account=terra1exqfh9ahyzm9g8z3ce57eyuxx72vem63utepjsf6stqtrztyz58spaf8ew`);
-                let data = await response.json()
+                let data = await response.json();
                 txs.push.apply(txs, data.txs);
                 offset = data.next;
                 // this may need to be adjusted to your api to handle the corner case where the last page size equal to PAGE_SIZE
@@ -183,8 +183,8 @@
                 // the behavior will be fine.
                 if (!data.next) {
                     keepGoing = false;
-                    localStorage.setItem("nextUpdate",tomorrow.getTime().toString())
-                    localStorage.setItem("txs",JSON.stringify(txs))
+                    localStorage.setItem("nextUpdate",tomorrow.getTime().toString());
+                    localStorage.setItem("txs",JSON.stringify(txs));
                 }
             }
             return txs;
@@ -194,22 +194,22 @@
             this.method = 'GET';
             let txs;
             let nextUpdate
-            let keepGoing=true
-            const currentDate=new Date()
-            const tomorrow = new Date()
-            tomorrow.setDate(tomorrow.getDate() + 1)
+            let keepGoing=true;
+            const currentDate=new Date();
+            const tomorrow = new Date();
+            tomorrow.setDate(tomorrow.getDate() + 1);
             if(localStorage.getItem('nextUpdate')){
-                nextUpdate = parseInt(localStorage.getItem('nextUpdate'),10)
+                nextUpdate = parseInt(localStorage.getItem('nextUpdate'),10);
             }else{
-                nextUpdate = 0
+                nextUpdate = 0;
             }
             if (localStorage.getItem('proposals')){
                 keepGoing = (currentDate.getTime() >= nextUpdate) ;
             }
             if(keepGoing===false && localStorage.getItem('proposals')){
-                txs=JSON.parse(localStorage.getItem('proposals'))
+                txs=JSON.parse(localStorage.getItem('proposals'));
             }else{
-                txs=[]
+                txs=[];
             }
             let offset = 0;
             while (keepGoing) {
@@ -217,7 +217,7 @@
                     "list_proposals":{"limit":(offset+30),"start_after":offset}
                 })
                 let response = await this.send(`${this.getLcdBaseUrl()}/cosmwasm/wasm/v1/contract/terra1exqfh9ahyzm9g8z3ce57eyuxx72vem63utepjsf6stqtrztyz58spaf8ew/smart/${base64Query}`);
-                let data = await response.json()
+                let data = await response.json();
                 txs.push.apply(txs, data.data.proposals);
                 offset += 30;
                 // this may need to be adjusted to your api to handle the corner case where the last page size equal to PAGE_SIZE
@@ -225,18 +225,18 @@
                 // the behavior will be fine.
                 if (data.data.proposals.length<30) {
                     keepGoing = false;
-                    localStorage.setItem("nextUpdate",tomorrow.getTime().toString())
-                    localStorage.setItem("proposals",JSON.stringify(txs))
+                    localStorage.setItem("nextUpdate",tomorrow.getTime().toString());
+                    localStorage.setItem("proposals",JSON.stringify(txs));
                 }
             }
             return txs;
         }
 
         objectToBase64(obj){
-            return btoa(JSON.stringify(obj))
+            return btoa(JSON.stringify(obj));
         }
         base64ToObject(base64){
-            return JSON.parse(atob(base64))
+            return JSON.parse(atob(base64));
         }
 
         getFcdBaseUrl()
